--- a/DUA_mapping.ipynb
+++ b/DUA_mapping.ipynb
@@ -11,17 +11,15 @@
     "import os\n",
     "import argparse\n",
     "import numpy as np\n",
-    "from glob import glob\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-    "os.environ[\"SM_FRAMEWORK\"] = \"tf.keras\"\n",
+    "import logging\n",
+    "from utils.configs import load_configs\n",
+    "from models.mbcnn import mbcnn\n",
+    "from utils.callbacks import build_callbacks\n",
+    "from metrics.metrics import F1Score\n",
     "import tensorflow as tf\n",
-    "import models\n",
-    "import metrics\n",
-    "import losses\n",
-    "import dataloaders as dl\n",
-    "from utils import ideatlas, deeplearning\n",
-    "from tqdm.keras import TqdmCallback\n",
-    "import math"
+    "from models.mbcnn import mbcnn\n",
+    "from losses import losses\n",
+    "from utils import dataloader as dl"
    ]
   },
   {
@@ -30,17 +28,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List available GPUs\n",
-    "physical_devices = tf.config.experimental.list_physical_devices('GPU')\n",
+    "config = load_configs('config.yaml')\n",
     "\n",
-    "if physical_devices:\n",
-    "    try:\n",
-    "        for gpu in physical_devices:\n",
-    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
-    "    except RuntimeError as e:\n",
-    "        print(f\"Error setting memory growth: {e}\")\n",
-    "else:\n",
-    "    print(\"No GPUs detected.\")"
+    "city = 'nairobi'\n",
+    "dir = os.path.join(config.DATA_PATH, city)\n",
+    "inputs = \".\".join(config.DATASET)\n",
+    "input_shapes = {input: config.IN_SHAPE[input] for input in config.DATASET}\n",
+    "h, w, _ = config.IN_SHAPE[config.DATASET[0]]\n"
    ]
   },
   {
@@ -49,68 +43,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "random.seed(42)\n",
-    "np.random.seed(42)\n",
-    "tf.random.set_seed(42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "def load_config(config_path):\n",
-    "    with open(config_path, 'r') as f:\n",
-    "        config = json.load(f)\n",
-    "    return config\n",
+    "train_dataset = dl.MBCNNDataset(\n",
+    "    os.path.join(dir, \"train\"),\n",
+    "    target_size=config.PATCH_SIZE\n",
+    ")\n",
+    "train_loader = dl.mbcnn_loader(train_dataset, batch_size=config.BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "config = load_config('./config.json')\n",
+    "val_dataset = dl.MBCNNDataset(\n",
+    "    os.path.join(dir, \"val\"),\n",
+    "    target_size=config.PATCH_SIZE\n",
+    ")\n",
+    "val_loader = dl.mbcnn_loader(val_dataset, batch_size=config.BATCH_SIZE, shuffle=False)\n",
     "\n",
-    "batch = config[\"batch\"]\n",
-    "epochs = config[\"epochs\"]\n",
-    "data_dir = config['data_dir']\n",
-    "chk_dir = config['chkdir']\n",
-    "log_dir = config[\"logdir\"]\n",
-    "city = data_dir.split('/')[2]\n",
-    "print(city)\n",
-    "inputs = config[\"dataset\"]\n",
-    "inputs_str = \"_\".join(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_shapes = {input: config[\"in_shape\"][input] for input in inputs}\n",
-    "for input, shape in input_shapes.items():\n",
-    "    # print(f\"Shape of {input} is {shape}\")\n",
-    "    dim = config[\"in_shape\"][input]\n",
-    "    X,Y = dim[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Training model on', city.capitalize(), 'dataset')\n",
-    "print('Input: ', inputs)\n",
-    "# train_s1 = ideatlas.load_image(data_dir + 'train', X, Y)\n",
-    "train_s2 = ideatlas.load_image(data_dir + 'train', X, Y)\n",
-    "train_bd = ideatlas.load_bd(data_dir + 'train', X, Y)\n",
-    "train_label = ideatlas.load_mask(data_dir + 'train', X, Y, config['n_classes'])\n",
-    "\n",
-    "#Validation\n",
-    "# valid_s1 = ideatlas.load_image(data_dir + 'val', X, Y)\n",
-    "valid_s2 = ideatlas.load_image(data_dir + 'val/', X, Y)\n",
-    "valid_bd = ideatlas.load_bd(data_dir + 'val', X, Y)\n",
-    "valid_label = ideatlas.load_mask(data_dir + 'val/', X, Y, config['n_classes'])"
+    "# Calculate class weights from training dataset\n",
+    "class_weight_dict, class_weight_list = train_dataset.compute_class_weights()"
    ]
   },
   {
@@ -197,16 +143,9 @@
    "outputs": [],
    "source": [
     "import segmentation_models as sm\n",
-    "\n",
-    "import models.fcn\n",
-    "dice_loss = sm.losses.DiceLoss(class_weights=class_weights) \n",
+    "dice_loss = sm.losses.DiceLoss(class_weights=class_weight_list) \n",
     "focal_loss = sm.losses.CategoricalFocalLoss()\n",
-    "t_loss =  dice_loss + (2 * focal_loss)\n",
-    "j_loss = sm.losses.JaccardLoss(class_weights=class_weights, class_indexes=None, per_image=False, smooth=1e-05)\n",
-    "# model = models.mbcnn(CL=config[\"n_classes\"], input_shapes=input_shapes, dropout_rate=0.2, batch_norm=True, drop_train=False)\n",
-    "# model = segmentation.lightunet(input_shape = (X,Y,4), NUM_CLASSES=3, dropout_rate=0.2, batch_norm=True)\n",
-    "# model = segmentation.mbcnn(CL=config[\"n_classes\"], input_shapes=input_shapes, dropout_rate=0.2, batch_norm=True, drop_train=False)\n",
-    "model = models.fcndk6(input_shapes=(X,Y,11), CL=config[\"n_classes\"])"
+    "t_loss =  focal_loss"
    ]
   },
   {
@@ -215,14 +154,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = mbcnn(config.N_CLASSES, input_shapes, dropout_rate=0.0, batch_norm=True, drop_train=False)\n",
     "\n",
     "model.compile(\n",
-    "optimizer=tf.keras.optimizers.Adam(learning_rate=config[\"lr\"]),\n",
-    "loss=t_loss,\n",
-    "# loss = losses.FocalLoss(),\n",
-    "metrics=[sm.metrics.FScore(threshold=0.5, class_indexes=None, per_image=False, smooth=1e-05, name='f1')]\n",
-    ")\n",
-    "print(f'| Model -> {model.name} | Parameters -> {model.count_params()} |')\n"
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=config.LR),\n",
+    "    loss=t_loss,\n",
+    "    metrics=[F1Score(name='f1')]\n",
+    ")"
    ]
   },
   {
@@ -231,37 +169,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.compile(\n",
-    "#     optimizer='adam',\n",
-    "#     loss={\n",
-    "#         'regression': 'mean_squared_error',\n",
-    "#         'segmentation': losses.FocalLoss()\n",
-    "#     },\n",
-    "#     loss_weights={\n",
-    "#         'regression': 1.0,\n",
-    "#         'segmentation': 1.0\n",
-    "#     },\n",
-    "#     metrics={\n",
-    "#         'regression': ['mean_squared_error'],\n",
-    "#         'segmentation': [metrics.IoU()]\n",
-    "#     }\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in os.listdir(chk_dir):\n",
-    "    if i.endswith('.h5'):\n",
-    "        os.remove(os.path.join(chk_dir, i))\n",
+    "if not os.path.exists(config.CHECKPOINT_PATH):\n",
+    "    os.makedirs(config.CHECKPOINT_PATH)\n",
     "\n",
-    "# Delete .csv files in ./log/\n",
-    "for j in os.listdir(log_dir):\n",
-    "    if j.endswith('.csv'):\n",
-    "        os.remove(os.path.join(log_dir, j))"
+    "if not os.path.exists(config.LOG_PATH):\n",
+    "    os.makedirs(config.LOG_PATH)"
    ]
   },
   {
@@ -270,82 +182,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define callbacks for saving logs, model weights, early stopping and learning rate schedule\n",
-    "# steps_per_epoch=len(trainData) // batch_size\n",
-    "steps_per_epoch = len(train_images[0])\n",
-    "callbacks = [\n",
-    "    # deeplearning.LRWarmup(\n",
-    "    #     warmup_steps=steps_per_epoch,\n",
-    "    #     target=config['lr'],\n",
-    "    #     verbose=0,\n",
-    "    # ),\n",
-    "    # tf.keras.callbacks.ReduceLROnPlateau(\n",
-    "    #     monitor=\"val_loss\",\n",
-    "    #     mode=\"min\",\n",
-    "    #     factor=0.1,\n",
-    "    #     patience=10,\n",
-    "    #     verbose=0,\n",
-    "    # ),\n",
-    "    tf.keras.callbacks.EarlyStopping(\n",
-    "        monitor=\"val_loss\",\n",
-    "        mode=\"min\",\n",
-    "        patience=15,\n",
-    "        verbose=1,\n",
-    "    ),\n",
-    "    tf.keras.callbacks.ModelCheckpoint(\n",
-    "        os.path.join(f'./{chk_dir}/{city}_{inputs_str}_{model.name}.weights.h5'),\n",
-    "        monitor=f\"val_loss\",\n",
-    "        mode=\"min\",\n",
-    "        save_best_only=True,\n",
-    "        save_weights_only=True,\n",
-    "    ),\n",
-    "    tf.keras.callbacks.CSVLogger(\n",
-    "        os.path.join(\"log\", f\"{city}_{inputs_str}_{model.name}_log.csv\"),\n",
-    "    ),\n",
-    "    deeplearning.training_progress(epochs, steps_per_epoch)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.fit(train_images, train_label,\n",
-    "        batch_size=batch,\n",
-    "        steps_per_epoch = math.ceil(len(train_s2) / batch),\n",
-    "        epochs=epochs,\n",
+    "callbacks = build_callbacks(city, inputs, model, train_loader, config)\n",
+    "\n",
+    "model.fit(train_loader,\n",
+    "        epochs=config.N_EPOCHS,\n",
     "        callbacks=callbacks,\n",
-    "        validation_data=(valid_images, valid_label),\n",
-    "        validation_steps = len(valid_s2) // batch,\n",
-    "        verbose=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## \n",
-    "# Fit with multi task learning\n",
-    "# hist = model.fit(train_images, [train_bd, train_masks],\n",
-    "#                 batch_size = batch_size,\n",
-    "#                 steps_per_epoch = len(train_s2) // batch_size,\n",
-    "#                 epochs=epochs,\n",
-    "#                 callbacks=callbacks, \n",
-    "#                 validation_data=(valid_images, [valid_bd, valid_masks]),\n",
-    "#                 validation_steps = len(valid_s2) // batch_size)\n",
-    "\n",
-    "#Fit with dataloader\n",
-    "# hist = model.fit(train_datagen,\n",
-    "#                     steps_per_epoch=len(trainData) // batch_size,\n",
-    "#                     epochs=epochs,\n",
-    "#                     callbacks=[callbacks],\n",
-    "#                     validation_data=validation_datagen,\n",
-    "#                     validation_steps=len(validData) // batch_size,\n",
-    "#                     verbose=1)"
+    "        validation_data=val_loader,\n",
+    "        verbose=0)\n"
    ]
   },
   {
@@ -357,9 +200,10 @@
    "outputs": [],
    "source": [
     "# # ## Plot training log\n",
+    "import utils\n",
     "import pandas as pd\n",
     "history = pd.read_csv(os.path.join(\"log\", f\"{city}_{inputs_str}_{model.name}_log.csv\"))\n",
-    "ideatlas.plot_log(history)"
+    "utils.plot_log(history)"
    ]
   },
   {
